# Answerbase

./: .env.example  README.md  docker-compose.yml  package.json
backend/: ai.py  db.py  list_models.py  main.py  pyproject.toml  security.py  test_api.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: ClientPage.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/contact/: page.tsx
frontend/app/dashboard/: ClientLayout.tsx  layout.tsx  page.tsx
frontend/app/dashboard/billing/: page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/conversations/: page.tsx
frontend/app/dashboard/documents/: page.tsx
frontend/app/dashboard/keys/: page.tsx
frontend/app/dashboard/widget/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/refund/: page.tsx
frontend/app/register/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  auth-context.tsx
frontend/public/: embed.js
