[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for multi-tenant AI support chatbot SaaS"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "pypdf>=5.1.0",
    "stripe>=11.0.0",
    "google-auth>=2.30.0",
]

[tool.setuptools]
py-modules = []
